--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
 
   cupertino_icons: ^1.0.8
   window_manager: ^0.4.3
+  sidebarx: ^0.17.1
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
@@ -23,3 +25,8 @@ flutter:
 
   assets:
      - assets/
+
+fonts:
+  - family: MiSans
+    fonts:
+      - asset: assets/fonts/MiSans.ttf
