--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,10 @@ name: Flutter Build (Web & Windows)
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master ]
   pull_request:
-    branches: [ main ]
+    branches: [ master ]
+  
 
 jobs:
   build-web:
