--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,6 +62,8 @@ jobs:
         run: flutter build windows
       - name: Upload Windows Artifact
         uses: actions/upload-artifact@v4
+permissions:
+  contents: write
         with:
           name: windows-build
           path: build/windows/
