--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,6 +63,6 @@ jobs:
         run: flutter build windows
       - name: Upload Windows Artifact
         uses: actions/upload-artifact@v4
-
+        with:
           name: windows-build
           path: build/windows/
