--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,7 +24,8 @@ flutter:
   uses-material-design: true
 
   assets:
-     - assets/
+     - assets/hmcl.png
+     - assets/background.png
 
 fonts:
   - family: MiSans
